--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -6,9 +6,8 @@
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
 
-  <!-- 💣 remove this line
-  <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
-  💣 remove this line -->
+  <script type="text/babel" src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+
 
   <script type="module">
     // 🐨 on the script tag above, change `type="module"`
